--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -3,3 +3,4 @@ $color-secondary: #ececec;
 $color-important: #e24742;
 $color-text-primary: #1d1d1d;
 $color-text-secondary: #737373;
+$color-special: #68c231;
